<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="350dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAlertIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_alert"
            android:padding="10dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlertTitle"
            style="@style/OnboardingTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/infection_alert_title"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/ivAlertIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivAlertIcon"
            app:layout_constraintTop_toTopOf="@+id/ivAlertIcon"
            app:layout_constraintVertical_bias="0.1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlertMessage"
            style="@style/OnboardingDesc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/infection_alert_message"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btnOnBoardingStart"
            app:layout_constraintEnd_toEndOf="@+id/tvAlertTitle"
            app:layout_constraintStart_toStartOf="@+id/ivAlertIcon"
            app:layout_constraintTop_toBottomOf="@+id/ivAlertIcon" />


        <Button
            android:id="@+id/btnOnBoardingStart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/gradient"
            android:fontFamily="@font/font"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textFontWeight="600"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


